kubernetes/main/apps/flux-system/flux-config/github/webhooks/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: github-webhook
  annotations:
    external-dns/is-public: "true"
    external-dns.kubernetes.io/target: external.zinn.ca
    gatus.home-operations.com/endpoint: |-
      conditions: ["[STATUS] == 404"]
spec:
  hostnames: ["flux-receiver.zinn.ca"]
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - name: webhook-receiver
          namespace: flux-system
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /hook/
